# guardpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: test_linux.yml  test_windows.yml
guard/include/: guard.hpp
guard/include/core/: guardbase.hpp
guard/include/core/linux/: guard.hpp
guard/include/core/windows/: guard.hpp
guard/src/core/: guardbase.cpp
guard/src/core/linux/: guard.cpp
guard/src/core/windows/: guard.cpp
include/: guard.hpp
src/: guard.linux.cpp  guard.windows.cpp
tests/: main.cpp  test.cpp
